--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<!--div>
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
@@ -17,4 +18,27 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
+</div-->
 
+<!--div style="text-align:center">
+  <h1>
+    Welcome to {{ title }}!
+  </h1>
+  <table border="1" width="100%">
+    <tr height="500px">
+      <td width="20%">Menu</td>
+      <td width="80%">Content</td>
+    </tr>
+  </table>
+</div-->
+
+<!--app-users></app-users-->
+
+<nav>
+  <!--a routerLink="/dashboard">Dashboard</a-->
+  <!--a routerLink="/users">Users</a-->
+  <a routerLink="/members">จัดการข้อมูลผู้ใช้</a>
+  <a routerLink="/keycards">จัดการข้อมูลคีย์การ์ด</a>
+</nav>
+<router-outlet></router-outlet>
+<!--app-messages></app-messages-->
