เพิ่มระบบ login
user : admin
pass : 1234

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,11 +34,11 @@
 
 <!--app-users></app-users-->
 
-<nav>
-  <!--a routerLink="/dashboard">Dashboard</a-->
-  <!--a routerLink="/users">Users</a-->
+<!--nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/users">Users</a>
   <a routerLink="/members">จัดการข้อมูลผู้ใช้</a>
   <a routerLink="/keycards">จัดการข้อมูลคีย์การ์ด</a>
-</nav>
+</nav-->
 <router-outlet></router-outlet>
 <!--app-messages></app-messages-->
