--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,3 +1,10 @@
+<form class="form-inline">
+<nav>
+    <a routerLink="/members">จัดการข้อมูลผู้ใช้</a>
+    <a routerLink="/keycards">จัดการข้อมูลคีย์การ์ด</a>
+</nav>
+<input type="button" (click) = "logout()" value="ออกจากระบบ" class="btn btn-danger">
+</form>
 <hr class="my-4"/>
 <div class="jumbotron">
   <a [routerLink]="['/members/new']" routerLinkActive="active">
