--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,10 +1,34 @@
-<form class="form-inline">
-<nav>
+<!--form class="form-inline">
+  <input type="button" (click) = "logout()" value="ออกจากระบบ" class="btn btn-danger">
+</form-->
+<!--nav>
     <a routerLink="/members">จัดการข้อมูลผู้ใช้</a>
     <a routerLink="/keycards">จัดการข้อมูลคีย์การ์ด</a>
+</nav-->
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#">.:: The Locker System ::.</a>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/members">จัดการข้อมูลผู้ใช้ <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/keycards">จัดการข้อมูลคีย์การ์ด</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">ช่วยเหลือ</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <label>เข้าสู่ระบบโดย : {{ses_nameValue}} </label>
+      &nbsp;&nbsp;<input type="button" (click) = "logout()" value="ออกจากระบบ" class="btn btn-danger">
+    </form>
+  </div>
 </nav>
-<input type="button" (click) = "logout()" value="ออกจากระบบ" class="btn btn-danger">
-</form>
 <hr class="my-4"/>
 <div class="jumbotron">
   <a [routerLink]="['/members/new']" routerLinkActive="active">
