--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 /* AppComponent's private CSS styles */
-h1 {
+/*h1 {
     font-size: 1.2em;
     color: #999;
     margin-bottom: 0;
@@ -26,6 +26,6 @@ h1 {
   }
   nav a.active {
     color: #039be5;
-  }
+  }*/
   
   
