--- a/src/app/keycards/keycards.component.html
+++ b/src/app/keycards/keycards.component.html
@@ -31,9 +31,97 @@
       <input type="button" (click)="readKeyId()" value="อ่านค่า" class="btn btn-default"/>
 
       <!-- Button trigger modal -->
-      <button type="button" (click)="myModal.open()" class="btn btn-primary" >
-        Launch demo modal
+      <button type="button" (click)="modal.open('lg')" class="btn btn-primary" >
+        เพิ่มสิทธิ์ผู้ใช้งาน
       </button>
   </div>
+  <table class="table table-hover table-striped">
+    <thead>
+      <tr>
+        <th scope="col">รหัส RFID</th>
+        <th scope="col">ชื่อ-นามสกุล</th>
+        <th scope="col">ลบสิทธิ์</th>
+      </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor = "let rfid of keycards" (click)="click2(rfid)">
+          <th scope="row">{{rfid.rfid_id}}</th>
+          <td>{{rfid.mem_tname}} {{rfid.mem_fname}} {{rfid.mem_lname}}</td>
+          <td>
+            <!--a [routerLink]="['/members', member.mem_gen]" routerLinkActive="active">
+              <input type="button" value="แก้ไข" class="btn btn-success">
+            </a-->
+            <!--input type="button" (click) = "deleteMember(member.mem_gen)" value="ลบ" class="btn btn-danger"-->
+            <input type="button" (click) = "deleteRightMember(rfid.rfid_id)" value="ลบ" class="btn btn-danger">
+          </td>
+        </tr>
+      </tbody>
+  </table>
+  <nav aria-label="Page navigation">
+      <ul class="pagination">
+        <li class="page-item" [ngClass]="{disabled:pager2.currentPage === 1}"><a class="page-link" (click)="setPage2(1)">First</a></li>
+        <li class="page-item" [ngClass]="{disabled:pager2.currentPage === 1}"><a class="page-link" (click)="setPage2(pager.currentPage - 1)">Previous</a></li>
+        <li class="page-item" *ngFor="let page of pager2.pages" [ngClass]="{active:pager2.currentPage === page}"><a class="page-link" (click)="setPage2(page)">{{page}}</a></li>
+        <li class="page-item" [ngClass]="{disabled:pager2.currentPage === pager2.totalPages}"><a class="page-link" (click)="setPage(pager2.currentPage + 1)">Next</a></li>
+        <li class="page-item" [ngClass]="{disabled:pager2.currentPage === pager2.totalPages}"><a class="page-link" (click)="setPage(pager2.totalPages)">Last</a></li>
+      </ul>
+    </nav>
 </div>
 
+
+<modal [animation]="animation" [keyboard]="keyboard" [backdrop]="backdrop" (onClose)="closed()" (onDismiss)="dismissed()"
+    (onOpen)="opened()" #modal>
+    <modal-header [show-close]="true">
+        <h4 class="modal-title">เพิ่มสิทธิผู้ใช้งาน [ KEY_ID : {{inputKeyId.rfid_id}} ]</h4>
+    </modal-header>
+    <modal-body>
+        <!--ul>
+            <li *ngFor="let item of items">
+                <a href="#" (click)="$event.preventDefault(); selected = item">{{ item }}</a>
+            </li>
+        </ul-->
+        <!--p *ngIf="selected">Selected: <b>{{ selected }}</b></p-->
+
+        <div class="form-group">
+          <label>ค้นหาชื่อ : </label>
+          <input  type="text"  id="inputName" [(ngModel)]="inputName.mem_fname"/>
+          <!--input type="button" (click)="FilterByName()" value="ค้นหา" class="btn btn-default"/-->
+      </div>
+      <table class="table table-hover table-striped">
+        <thead>
+          <tr>
+            <th scope="col">รหัส</th>
+            <th scope="col">ชื่อ-นามสกุล</th>
+            <th scope="col">เพิ่มสิทธิ์</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor = "let member of members | filterBy: inputName" (click)="click(member)">
+            <th scope="row">{{member.mem_id}}</th>
+            <td>{{member.mem_tname}} {{member.mem_fname}} {{member.mem_lname}}</td>
+            <td>
+              <!--a [routerLink]="['/members', member.mem_gen]" routerLinkActive="active">
+                <input type="button" value="แก้ไข" class="btn btn-success">
+              </a-->
+              <!--input type="button" (click) = "deleteMember(member.mem_gen)" value="ลบ" class="btn btn-danger"-->
+              <input type="button" (click) = "addRightMember(member.mem_gen)" value="เลือก" class="btn btn-success">
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <nav aria-label="Page navigation">
+        <ul class="pagination">
+          <li class="page-item" [ngClass]="{disabled:pager.currentPage === 1}"><a class="page-link" (click)="setPage(1)">First</a></li>
+          <li class="page-item" [ngClass]="{disabled:pager.currentPage === 1}"><a class="page-link" (click)="setPage(pager.currentPage - 1)">Previous</a></li>
+          <li class="page-item" *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}"><a class="page-link" (click)="setPage(page)">{{page}}</a></li>
+          <li class="page-item" [ngClass]="{disabled:pager.currentPage === pager.totalPages}"><a class="page-link" (click)="setPage(pager.currentPage + 1)">Next</a></li>
+          <li class="page-item" [ngClass]="{disabled:pager.currentPage === pager.totalPages}"><a class="page-link" (click)="setPage(pager.totalPages)">Last</a></li>
+        </ul>
+      </nav>
+
+    </modal-body>
+    <modal-footer>
+      <button type="button" class="btn btn-default" data-dismiss="modal" (click)="modal.dismiss()">Cancel</button>
+      <button type="button" class="btn btn-primary" (click)="modal.close()">Ok</button>
+  </modal-footer>
+</modal>
