--- a/src/app/keycards/keycards.component.html
+++ b/src/app/keycards/keycards.component.html
@@ -35,6 +35,11 @@
         เพิ่มสิทธิ์ผู้ใช้งาน
       </button>
   </div>
+  <div class="form-group">
+    <label>ค้นหาชื่อ : </label>
+    <input  type="text"  id="inputName2" [(ngModel)]="inputName2.mem_fname"/>
+    <!--input type="button" (click)="FilterByName()" value="ค้นหา" class="btn btn-default"/-->
+ </div>
   <table class="table table-hover table-striped">
     <thead>
       <tr>
@@ -44,7 +49,7 @@
       </tr>
     </thead>
     <tbody>
-        <tr *ngFor = "let rfid of keycards" (click)="click2(rfid)">
+        <tr *ngFor = "let rfid of keycards | filterBy: inputName2" (click)="click2(rfid)">
           <th scope="row">{{rfid.rfid_id}}</th>
           <td>{{rfid.mem_tname}} {{rfid.mem_fname}} {{rfid.mem_lname}}</td>
           <td>
@@ -52,7 +57,7 @@
               <input type="button" value="แก้ไข" class="btn btn-success">
             </a-->
             <!--input type="button" (click) = "deleteMember(member.mem_gen)" value="ลบ" class="btn btn-danger"-->
-            <input type="button" (click) = "deleteRightMember(rfid.rfid_id)" value="ลบ" class="btn btn-danger">
+            <input type="button" (click) = "deleteRightMember(rfid.rfid_gen)" value="ลบ" class="btn btn-danger">
           </td>
         </tr>
       </tbody>
