--- a/src/app/members/edit-members/edit-members.component.html
+++ b/src/app/members/edit-members/edit-members.component.html
@@ -41,6 +41,14 @@
         </div>
     </div>
     <br>
+  <div class="form-group">
+      <label for="inputEmail" class="col-lg-4 control-label">วันเดือนปีเกิด</label>
+      <div class="col-lg-10">
+        <my-date-picker name="mydate" (dateChanged)="onDateChanged($event)"
+                    [selDate]="selDate"></my-date-picker>
+      </div>
+    </div>
+      <br>
     <div class="form-group">
         <div class="col-lg-10 col-lg-offset-2">
             <input type="submit" class="btn btn-primary" value="ปรับปรุง">
@@ -49,7 +57,8 @@
             </a>
         </div>
       </div>
-    
+    <div class="form-group">
+  </div>  
     </fieldset>
   </form>
   <div class="col-lg-3"></div>
