--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -22,6 +22,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/lockers">สถานะตู้ล็อคเกอร์</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/reports">รายงาน </a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <label>เข้าสู่ระบบโดย : {{ses_nameValue}} </label>
