--- a/src/app/keycards/keycards.component.html
+++ b/src/app/keycards/keycards.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -28,20 +28,36 @@
 <hr class="my-4"/>
 <div class="jumbotron">
   <h4>จัดการข้อมูลคีย์การ์ด</h4>
-  <div class="form-group">
+  <div class="form-group" style="text-align:center;">
       <label>KEY ID : </label>
-      <input  type="text"  id="inputKeyId" [(ngModel)]="inputKeyId.rfid_id"/>
+      <input  type="text"  id="inputKeyId" readonly="true" [(ngModel)]="inputKeyId.rfid_id"/>
       <input type="button" (click)="readKeyId()" value="อ่านค่า" class="btn btn-default"/>
 
       <!-- Button trigger modal -->
-      <button type="button" (click)="modal.open('lg')" class="btn btn-primary" >
+      <button type="button" (click)="modal.open('lg'); " class="btn btn-primary" >
         เพิ่มสิทธิ์ผู้ใช้งาน
       </button>
   </div>
   <div class="form-group">
-    <label>ค้นหาชื่อ : </label>
-    <input  type="text"  id="inputName2" [(ngModel)]="inputName2.mem_fname"/>
-    <!--input type="button" (click)="FilterByName()" value="ค้นหา" class="btn btn-default"/-->
+      <div class="form-row">
+      <div style="float: left; width: 80%;">
+          <label>ค้นหาชื่อ : </label>
+          <input  type="text"  id="inputName2" [(ngModel)]="inputName2.mem_fname"/>
+
+          <!--input type="button" (click)="FilterByName()" value="ค้นหา" class="btn btn-default"/-->
+          <button type="button" (click)="searchKeycard(inputName2.mem_fname)" class="btn btn-default" >
+            ค้นหา
+          </button>
+      </div>
+      <div style="float: right; width: 20%;">
+        แสดงจำนวน : <select style="width:30%; display:unset;" id="Id" #Id="ngModel" class="hideLabel form-control" [(ngModel)]="inputPageSize2" name="Id" (change)="selectPageSize2();">  
+            <!--option selected="" value=""></option-->  
+            <option [ngValue]="k.Id" *ngFor="let k of pageSizeList2">  
+                    {{k.Name}}  
+            </option>  
+          </select> 
+      </div>
+    </div>
  </div>
   <table class="table table-hover table-striped">
     <thead>
@@ -52,29 +68,32 @@
       </tr>
     </thead>
     <tbody>
-        <tr *ngFor = "let rfid of keycards | filterBy: inputName2" (click)="click2(rfid)">
+        <!--tr *ngFor = "let rfid of keycards | filterBy: inputName2" (click)="click2(rfid)"-->
+        <tr *ngFor = "let rfid of keycards" (click)="click2(rfid)">
           <th scope="row">{{rfid.rfid_id}}</th>
-          <td>{{rfid.mem_tname}} {{rfid.mem_fname}} {{rfid.mem_lname}}</td>
+          <td>{{rfid.mem_tname}} {{rfid.mem_fname}} {{rfid.mem_lname}} </td>
+          <td style="display:none">{{rfid.mem_gen}}</td>
           <td>
             <!--a [routerLink]="['/members', member.mem_gen]" routerLinkActive="active">
               <input type="button" value="แก้ไข" class="btn btn-success">
             </a-->
             <!--input type="button" (click) = "deleteMember(member.mem_gen)" value="ลบ" class="btn btn-danger"-->
-            <input type="button" (click) = "deleteRightMember(rfid.rfid_gen)" value="ลบ" class="btn btn-danger">
+            <input type="button" (click) = "deleteRightMember(rfid.rfid_gen, rfid.mem_gen)" value="ลบ" class="btn btn-danger">
           </td>
         </tr>
       </tbody>
   </table>
   <nav aria-label="Page navigation">
-      <ul class="pagination">
-        <li class="page-item" [ngClass]="{disabled:pager2.currentPage === 1}"><a class="page-link" (click)="setPage2(1)">First</a></li>
-        <li class="page-item" [ngClass]="{disabled:pager2.currentPage === 1}"><a class="page-link" (click)="setPage2(pager.currentPage - 1)">Previous</a></li>
-        <li class="page-item" *ngFor="let page of pager2.pages" [ngClass]="{active:pager2.currentPage === page}"><a class="page-link" (click)="setPage2(page)">{{page}}</a></li>
-        <li class="page-item" [ngClass]="{disabled:pager2.currentPage === pager2.totalPages}"><a class="page-link" (click)="setPage(pager2.currentPage + 1)">Next</a></li>
-        <li class="page-item" [ngClass]="{disabled:pager2.currentPage === pager2.totalPages}"><a class="page-link" (click)="setPage(pager2.totalPages)">Last</a></li>
-      </ul>
-    </nav>
+    <ul class="pagination">
+      <li class="page-item" [ngClass]="{disabled:pager2.currentPage === 1}"><a class="page-link" (click)="setPage2(1)">First</a></li>
+      <li class="page-item" [ngClass]="{disabled:pager2.currentPage === 1}"><a class="page-link" (click)="setPage2(pager2.currentPage - 1)">Previous</a></li>
+      <li class="page-item" *ngFor="let page of pager2.pages" [ngClass]="{active:pager2.currentPage === page}"><a class="page-link" (click)="setPage2(page)">{{page}}</a></li>
+      <li class="page-item" [ngClass]="{disabled:pager2.currentPage === pager2.totalPages}"><a class="page-link" (click)="setPage2(pager2.currentPage + 1)">Next</a></li>
+      <li class="page-item" [ngClass]="{disabled:pager2.currentPage === pager2.totalPages}"><a class="page-link" (click)="setPage2(pager2.totalPages)">Last</a></li>
+    </ul>
+  </nav>
 </div>
+<hr class="my-4">
 
 
 <modal [animation]="animation" [keyboard]="keyboard" [backdrop]="backdrop" (onClose)="closed()" (onDismiss)="dismissed()"
@@ -90,10 +109,26 @@
         </ul-->
         <!--p *ngIf="selected">Selected: <b>{{ selected }}</b></p-->
 
-        <div class="form-group">
-          <label>ค้นหาชื่อ : </label>
-          <input  type="text"  id="inputName" [(ngModel)]="inputName.mem_fname"/>
-          <!--input type="button" (click)="FilterByName()" value="ค้นหา" class="btn btn-default"/-->
+      <div class="form-group">
+        <div class="form-row">
+            <div style="float: left; width: 75%;">
+                <label>ค้นหาชื่อ : </label>
+                <input  type="text"  id="inputName" [(ngModel)]="inputName.mem_fname"/>
+                <!--input type="button" (click)="FilterByName()" value="ค้นหา" class="btn btn-default"/-->
+        
+                <button type="button" (click)="searchRightMember(inputName.mem_fname)" class="btn btn-default" >
+                  ค้นหา
+                </button>
+            </div>
+            <div style="float: right; width: 25%;">
+                แสดงจำนวน : <select style="width:40%; display:unset;" id="Id" #Id="ngModel" class="hideLabel form-control" [(ngModel)]="inputPageSize" name="Id" (change)="selectPageSize();">  
+                    <!--option selected="" value=""></option-->  
+                    <option [ngValue]="k.Id" *ngFor="let k of pageSizeList">  
+                            {{k.Name}}  
+                    </option>  
+                  </select> 
+            </div>
+        </div>
       </div>
       <table class="table table-hover table-striped">
         <thead>
@@ -104,7 +139,8 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor = "let member of members | filterBy: inputName" (click)="click(member)">
+          <!--tr *ngFor = "let member of members | filterBy: inputName" (click)="click(member)"-->
+          <tr *ngFor = "let member of members" (click)="click(member)">
             <th scope="row">{{member.mem_id}}</th>
             <td>{{member.mem_tname}} {{member.mem_fname}} {{member.mem_lname}}</td>
             <td>
